--- a/src/pages/Signup.css
+++ b/src/pages/Signup.css
@@ -1,3 +1,13 @@
+body{
+  background: url('../images/Screenshot\ 2024-07-15\ 232523.jpg') no-repeat center center fixed;
+  background-size: cover;
+  display: flex;
+  padding: 113.6px 115.04px 156px 115.04px;
+  width: 1152px;
+  box-sizing: border-box;
+}
+
+
 .signup {
   background: #FFFFFF;
   display: flex;
