--- a/src/pages/Landing1.css
+++ b/src/pages/Landing1.css
@@ -524,9 +524,10 @@
   box-sizing: border-box;
 }
 .landing-1 .container-9 {
-  background: url('assets/images/Image3.jpeg') 50% / cover no-repeat;
+  background: url('assets/images/Image7.jpeg') 50% / cover no-repeat;
   width: 340px;
   height: 240px;
+  
 }
 .landing-1 .imgacademy-10 {
   border-radius: 10px;
@@ -952,8 +953,8 @@
   box-sizing: border-box;
 }
 .landing-1 .container-4 {
-  margin: 10px 0;
-  display: inline-block;
+  margin-top: 20px;
+  display: flex;
   overflow-wrap: break-word;
   font-family: 'Roboto';
   font-weight: 600;
@@ -962,6 +963,7 @@
   line-height: 1.25;
   text-transform: capitalize;
   color: #000000;
+  align-items: flex-end;
 }
 .landing-1 .actions-4 {
   margin-right: 18.5px;
@@ -1350,6 +1352,7 @@
   display: flex;
   flex-direction: row;
   box-sizing: border-box;
+  margin-right: 140px;
 }
 .landing-1 .arrows-1 {
   transform: rotate(15.165deg);
@@ -1387,11 +1390,6 @@
   width: 1204px;
   height: 288px;
   box-sizing: border-box;
-}
-.landing-1 .container-17 {
-  background: url('assets/images/Image10.jpeg') 50% / cover no-repeat;
-  width: 212px;
-  height: 161px;
 }
 .landing-1 .imginstructor-07 {
   border-radius: 10px;
@@ -1914,7 +1912,7 @@
   overflow-wrap: break-word;
   font-family: 'Roboto';
   font-weight: 700;
-  font-size: 48px;
+  font-size: 40px;
   line-height: 1.333;
   color: #1C1C1C;
 }
@@ -1942,13 +1940,18 @@
   box-sizing: border-box;
 }
 .landing-1 .what-they-say {
-  margin-right: 11.5px;
-  width: 815.1px;
   overflow-wrap: break-word;
   font-family: 'Roboto';
   font-weight: 700;
   font-size: 20px;
   color: #FD953E;
+  align-items: center;
+  margin-right: 397px;
+
+}
+.landing-1 .group-12{
+  display: flex;
+  align-items: center;
 }
 .landing-1 .ellipse-1 {
   border-radius: 5px;
@@ -1993,12 +1996,17 @@
   box-sizing: border-box;
 }
 .landing-1 .container-11 {
-  margin: 0 3.3px 348.3px 0;
+  margin: 0 3.3px 0;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   width: 917.3px;
   box-sizing: border-box;
+}
+.landing-1 .container-17{
+  display: inline-flex;
+ margin-bottom: 20px;
+   
 }
 .landing-1 .icon-13 {
   overflow-wrap: break-word;
@@ -2037,12 +2045,14 @@
   border-radius: 12px;
   background: rgba(31, 87, 170, 0.07);
   position: relative;
-  margin-bottom: 2px;
+  margin-left: 10px;
   display: flex;
   padding: 13px 0;
-  width: 64px;
+  width: 60px;
   height: fit-content;
   box-sizing: border-box;
+  align-items: center;
+  justify-content: center;
 }
 .landing-1 .container-14 {
   display: flex;
@@ -2058,15 +2068,15 @@
   flex-direction: column;
   align-items: flex-end;
   padding: 40.3px 37px 46.6px 40.3px;
-  width: 997.9px;
+  width: 800px;
   box-sizing: border-box;
 }
 .landing-1 .testimonials-section {
-  margin: 0 0 190.4px 22px;
   display: flex;
   flex-direction: row;
-  width: fit-content;
   box-sizing: border-box;
+  margin-bottom: 100px; 
+  margin-top: 100px;
 }
 .landing-1 .background-11 {
   position: absolute;
@@ -2105,15 +2115,13 @@
   color: #000000;
 }
 .landing-1 .top-footer {
-  margin: 0 49.1px 523px 0;
+  margin: 0 49.1px 200px 0;
   display: flex;
   flex-direction: row;
-  width: fit-content;
   box-sizing: border-box;
 }
 .landing-1 .privacy-policy-terms-conditions {
   margin-right: 7px;
-  width: 1238px;
   overflow-wrap: break-word;
   font-family: var(--input-text-font-family, 'Roboto');
   font-weight: var(--input-text-font-weight, 400);
@@ -2136,22 +2144,19 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding: 25px 32.9px 25px 25px;
-  width: 1472px;
   box-sizing: border-box;
 }
 .landing-1 .footer {
   border-radius: 40px 40px 0 0;
   background: #F6F6F6;
   position: relative;
-  margin: 0 184px;
   display: flex;
   flex-direction: column;
   align-items: center;
   align-self: flex-start;
   padding: 20px;
-  width: fit-content;
   box-sizing: border-box;
+
 }
 .landing {
   background: #FFFFFF;
