--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
-body {
-  font-family: "Roboto";
+body, html, #root {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+  height: 100%;
+  background-color: #f0f0f0;
 }
