--- a/src/pages/Signup.css
+++ b/src/pages/Signup.css
@@ -1,18 +1,8 @@
-body{
-  background: url('../images/Screenshot\ 2024-07-15\ 232523.jpg') no-repeat center center fixed;
-  background-size: cover;
-  display: flex;
-  padding: 113.6px 115.04px 156px 115.04px;
-  width: 1152px;
-  box-sizing: border-box;
-}
-
 
 .signup {
   background: #FFFFFF;
   display: flex;
-  padding: 113.6px 115.04px 156px 115.04px; /* 142px * 0.8, 143.8px * 0.8, 195px * 0.8, 143.8px * 0.8 */
-  width: 1152px; /* 1440px * 0.8 */
+  width: 100%; /* 1440px * 0.8 */
   box-sizing: border-box;
 }
 
@@ -28,6 +18,12 @@ body{
   justify-content: center;
   align-items: center;
 }
+
+.email::placeholder {
+  /* Styles for the email input placeholder */
+  color: white; /* Change placeholder color to white */
+}
+
 
 .signup .container-5 {
   display: flex;
