--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -18,7 +18,7 @@ body {
 }
 
 .login .rectangle-40 {
-  background: rgba(34, 32, 34, 0.77); 
+  background: rgba(34, 32, 34); 
   position: absolute;
   top: 45.6px;
   right: 80px;
